add icon launcher

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,14 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_launcher_icons_maker: ^0.10.2
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: "assets/images/simpati-logo.png"
+  android: true
+  # ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
